src/objects/Final_Result_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Bidder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidder</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Final Result Summaries</relationshipLabel>
        <relationshipName>Final_Result_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_MOM_Prediction_Success__c</fullName>
        <label>Total MOM Prediction Success</label>
        <summaryFilterItems>
            <field>Bidder_Result__c.Is_ManOfMatch_Correct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bidder_Result__c.Bidder_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Matches_Played__c</fullName>
        <label>Total Matches Played</label>
        <summaryForeignKey>Bidder_Result__c.Bidder_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <summarizedField>Bidder_Result__c.Points_Earned__c</summarizedField>
        <summaryForeignKey>Bidder_Result__c.Bidder_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Winners_Prediction_Success__c</fullName>
        <label>Total Winners Prediction Success</label>
        <summaryFilterItems>
            <field>Bidder_Result__c.Is_Team_Prediction_Correct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bidder_Result__c.Bidder_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Final Result Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FRS-{00000}</displayFormat>
        <label>Final Result Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Result Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>